--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10932,4 +10932,10 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+.badge a {
+    color: white;
+}
 
+.form-inline {
+    display: inline;
+}
